app/assets/stylesheets/redesign/_checkout_v2.css.scss
// Style Resets
// TODO - Remove upstream broken CSS
.checkout.page-content {
  p {
    font-weight: normal; // RESET
  }

  h1, h2 {
    text-transform: none; // RESET
  }

  label {
    text-transform: none; // RESET
  }
}

// Vars
$checkout-form-border-color-inactive: #acacac;
$checkout-form-border-color-active:   #000000;
$checkout-form-error-color: #ff2e2e;

$checkout-breadcrumbs-color-inactive: #000000;
$checkout-info-peach: #ddb099;


$payment-selector-bg: #f2f2f2;
$order-summary-bg: #f7f7f9;

.checkout.page-content {
  .checkout-masthead {
    margin: 40px 0;
    vertical-align: middle;
    line-height: 60px;

    h1 {
      line-height: 60px;
      margin: 0;
      padding: 0;

      display: inline-block;
      font-size: 30px;
      font-family:$font-family-secondary;

      img {
        display: inline-block;
        line-height: 60px;
        margin-right: 30px;
      }
    }

    .support-options {
      @include mobile {
        // TODO - Put on bottom on screen as in design.
        display: none;
      }
      margin:0;
      float:right !important;
      line-height: 60px;

      li {
        line-height: 1em;
        padding-left: 15px;
        padding-right: 15px;
        &.live-chat {
          a { color: #000000; font-weight:bold; }
        }

        .icon-live-chat, .icon-support-telephone {
          @extend .icon;
          font-size: 35px;
          vertical-align: middle;
        }

        .icon-support-telephone {
          @extend .icon-phone-chat;
        }
        .icon-live-chat {
          @extend .icon-chat-bubbles;
        }

      }
      li + li {
        border-left: 1px solid #000000;
      }
    }
  }

  .checkout-breadcrumbs {
    .breadcrumb {
      padding: 0;
      background-color: transparent;
      li + li:before {
        content: '> '; // Override
        color: $checkout-breadcrumbs-color-inactive;
      }
      li.active {
        color: $checkout-info-peach;
      }
    }
    #comodo{
      margin-top: -10px;
      margin-right: 12px;
      img{
        width: 175px;
      }
      @media (min-width: 375px) and (max-width: 414px){
        margin-top:25px;
      }
      @media (max-width: 375px){
        margin-top: 25px;
        margin-right: 5px;
        img{
          width: 100px;
        }
      }
      @media (max-width: 320px){
        margin-top: 30px;
        margin-right: 5px;
      }
    }
  }

  .help-block {
    color: $checkout-info-peach;
  }

  .checkout-step {
    .checkout-section-title {
      font-size: 30px;
      font-weight: normal;
    }

    .form-control {
      border: 1px solid $checkout-form-border-color-inactive;

      &:focus {
        border-color: $checkout-form-border-color-active;
      }
    }

    .errorExplanation, .has-warning label {
      color: $checkout-form-error-color;
    }

    // Style the default bootstrap panel classes.
    // TODO - use semantic classes and extend the BS ones.
    #payment-selection {
      .panel {

        .row:last-child .form-group { margin-bottom: 0; }

        @include border-radius(3px);
        border: 1px solid $checkout-form-border-color-inactive;
        .panel-heading {}
        h4.panel-title {
          font-size: 22px;
        }
        .panel-body {
          background-color: $payment-selector-bg;
          input {
            background-color: #ffffff;
          }
        }
      }
    }
  }
}

.checkout .slash {
  line-height:105px;
  float: left;
  margin-left: -5px;
  margin-right: -5px;
}

.checkout .card_code {
  @media(max-width: 480px){
    clear: both;
  }
}

.checkout .shipAddress{
  text-transform: none;
  margin-left: 10px;
}

